--- a/Week1_assignment1.ipynb
+++ b/Week1_assignment1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJPdgbiLWUuEsPsCPEqx3M",
+      "mount_file_id": "1cudcpP4sNHsGLp3FnmuNWIgbkptPAopZ",
+      "authorship_tag": "ABX9TyPCm3+h7QclMR3pxuBQ3jZk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "n6DLzW0JoVIW"
       },
@@ -45,12 +46,36 @@
     {
       "cell_type": "code",
       "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p5AW0NWORca_",
+        "outputId": "d9809ef6-b6a0-4e51-b369-47978bc4eed8"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "dataset = pd.read_csv('data.csv')"
       ],
       "metadata": {
         "id": "smcbXITQD7K1"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -64,9 +89,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "31af8e30-ad20-4dbd-cb5e-01b7705ddcff"
+        "outputId": "9f1a4b6d-9f9f-4e10-db49-b6861f48c88c"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -88,7 +113,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4a586df2-15fb-4d1d-973f-7d43625dacff\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a82a16a2-9d5e-4359-b051-b551f1e2d22e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -185,7 +210,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4a586df2-15fb-4d1d-973f-7d43625dacff')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a82a16a2-9d5e-4359-b051-b551f1e2d22e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -237,12 +262,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4a586df2-15fb-4d1d-973f-7d43625dacff button.colab-df-convert');\n",
+              "        document.querySelector('#df-a82a16a2-9d5e-4359-b051-b551f1e2d22e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4a586df2-15fb-4d1d-973f-7d43625dacff');\n",
+              "        const element = document.querySelector('#df-a82a16a2-9d5e-4359-b051-b551f1e2d22e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -262,8 +287,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-7befa6a8-3410-4287-994a-d1f8ec6e309d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7befa6a8-3410-4287-994a-d1f8ec6e309d')\"\n",
+              "<div id=\"df-0607042c-8c50-42d5-942b-112dfd9224a9\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0607042c-8c50-42d5-942b-112dfd9224a9')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -382,7 +407,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-7befa6a8-3410-4287-994a-d1f8ec6e309d button');\n",
+              "        document.querySelector('#df-0607042c-8c50-42d5-942b-112dfd9224a9 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -399,7 +424,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 9
         }
       ]
     },
